Avançando nas aulas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,6 @@
 <app-cursos></app-cursos>
 <app-data-binding></app-data-binding>
 <app-class-style-binding></app-class-style-binding>
+<app-event-binding></app-event-binding>
+<app-two-way-data-binding></app-two-way-data-binding>
+<app-ciclo></app-ciclo>
